--- a/package.json
+++ b/package.json
@@ -2,5 +2,9 @@
   "name": "metagame-discord-bot",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "discord.js": "^12.1.1",
+    "dotenv": "^8.2.0"
+  }
 }
